prettier and tailwind updates

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,6 +1,6 @@
 # Add 'repo' label to any root file changes
 repo:
-  - '*'
+  - "*"
 
 # Add 'domain/core' label to any change within the 'core' package
 domain/core:
@@ -13,9 +13,9 @@ test:
 
 # Add 'source' label to any change to src files within the source dir EXCEPT for the docs sub-folder
 source:
-  - any: ['src/**/*', '!src/docs/*']
+  - any: ["src/**/*", "!src/docs/*"]
 
 # Add 'frontend` label to any change to *.js files as long as the `main.js` hasn't changed
 frontend:
-  - any: ['src/**/*.js']
-    all: ['!src/main.js']
+  - any: ["src/**/*.js"]
+    all: ["!src/main.js"]
