--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "escape-html": "^1.0.3",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
