--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sharp": "^0.31.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/escape-html": "^1.0.2",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
