--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
@@ -39,7 +39,7 @@
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
