--- a/.prettierignore
+++ b/.prettierignore
@@ -142,3 +142,9 @@ next-env.d.ts
 
 # rss feeds
 public/rss
+
+# service worker
+public/sw.js
+public/sw.js.map
+public/workbox-*.js
+public/workbox-*.js.map
