--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "next": "^13.0.0",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
