--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
-    "next": "^13.0.0",
+    "next": "^13.0.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,12 +35,12 @@
     "@tailwindcss/typography": "^0.5.7",
     "@types/escape-html": "^1.0.2",
     "@types/node": "18.8.5",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
-    "eslint": "8.25.0",
-    "eslint-config-next": "^13.0.0",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.1",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
