--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "mdlint": "markdownlint-cli2 '**/*.md' '#node_modules'",
+    "mdlintfix": "markdownlint-cli2-fix '**/*.md' '#node_modules'",
     "typecheck": "tsc",
     "prepare": "husky install"
   },
@@ -42,8 +44,10 @@
     "eslint": "^8.26.0",
     "eslint-config-next": "^13.0.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-markdownlint": "^0.4.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "markdownlint-cli2": "^0.5.1",
     "postcss": "^8.4.18",
     "postcss-import": "^15.0.0",
     "prettier": "^2.7.1",
