--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,5 @@ jobs:
       - run: npx prettier --check .
       - run: npm run typecheck
       - run: npm run lint
+      - run: npm run mdlint
       - run: npm run build --if-present
