--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/analytics": "^0.1.3",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "escape-html": "^1.0.3",
