--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "bestseenonfoot",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.12.0",
+    "npm": ">=8.19.2"
+  },
+  "engineStrict": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
