--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@vercel/analytics": "^0.1.6",
+    "@vercel/analytics": "^0.1.8",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
-    "next": "^13.1.1",
+    "next": "^13.1.6",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.4",
+    "react-markdown": "^8.0.5",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sharp": "^0.31.3"
@@ -43,13 +43,13 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/escape-html": "^1.0.2",
-    "@types/node": "18.8.5",
-    "@types/react": "^18.0.26",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-markdownlint": "^0.4.0",
     "husky": "^8.0.3",
@@ -57,10 +57,10 @@
     "markdownlint-cli2": "^0.5.1",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
-    "prettier": "^2.8.2",
-    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prettier": "2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.8.4"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
