--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:cypress/recommended",
+    "next/core-web-vitals",
+    "prettier"
+  ],
   "rules": {
     "no-duplicate-imports": "warn",
     "no-useless-rename": "warn",
