--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.1",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-markdownlint": "^0.4.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
