adding first playwright test

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,6 @@ public/workbox-*.js.map
 # cypress
 cypress/screenshots
 cypress/videos
+/test-results/
+/playwright-report/
+/playwright/.cache/
