--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,10 +25,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npx prettier --check .
-      - run: npm run typecheck
-      - run: npm run lint
-      - run: npm run mdlint
-      - run: npm run test
+      - name: Install dependencies
+        run: npm ci
+      - name: Run build
+        run: npm run build --if-present
+      - name: Prettier Check
+        run: npx prettier --check .
+      - name: Type Check
+        run: npm run typecheck
+      - name: Lint JS
+        run: npm run lint
+      - name: Lint MD
+        run: npm run mdlint
