--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@playwright/test": "^1.31.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/escape-html": "^1.0.2",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
@@ -64,6 +66,8 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-markdownlint": "^0.4.0",
     "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "lint-staged": "^13.1.2",
     "markdownlint-cli2": "^0.6.0",
     "postcss": "^8.4.21",
