add tests to build

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,3 +37,5 @@ jobs:
         run: npm run lint
       - name: Lint MD
         run: npm run mdlint
+      - name: Jest Testing
+        run: npm run test:ci
