one more test runner

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "component:headless": "cypress run --component",
     "test": "jest --watch",
     "test:ci": "jest --ci --no-watch --no-watchAll",
-    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run component:headless && npm run e2e:headless",
+    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run component:headless && npm run e2e:headless && npm run e2e:playwright",
     "version": "npm run build && git add .",
     "postversion": "git push && git push --tags && rm -rf .next"
   },
