--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bestseenonfoot",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "engines": {
     "node": "18",
@@ -21,7 +21,9 @@
     "e2e:playwright": "playwright test",
     "component": "cypress open --component",
     "component:headless": "cypress run --component",
-    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci --no-watch --no-watchAll",
+    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run component:headless && npm run e2e:headless && npm run e2e:playwright",
     "version": "npm run build && git add .",
     "postversion": "git push && git push --tags && rm -rf .next"
   },
@@ -51,7 +53,10 @@
     "@playwright/test": "^1.31.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/escape-html": "^1.0.2",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -64,6 +69,8 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-markdownlint": "^0.4.0",
     "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "lint-staged": "^13.1.2",
     "markdownlint-cli2": "^0.6.0",
     "postcss": "^8.4.21",
