--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "types": ["node"]
+    "types": ["node"],
+    "baseUrl": "./"
   },
   "exclude": ["node_modules"],
   "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"]
