--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "isolatedModules": true,
     "incremental": true,
     "types": ["node"],
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "noImplicitAny": true
   },
   "exclude": ["node_modules"],
   "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"]
