--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "8.0.0",
   "private": true,
   "engines": {
-    "node": "^18.12.0",
-    "npm": "^8.19.2"
+    "node": "^18",
+    "npm": "^8 || ^9"
   },
   "engineStrict": true,
   "scripts": {
