--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "build-and-start": "next build && next start",
     "lint": "next lint",
     "mdlint": "markdownlint-cli2 '**/*.md' '#node_modules'",
     "mdlintfix": "markdownlint-cli2-fix '**/*.md' '#node_modules'",
     "typecheck": "tsc",
     "prepare": "husky install",
-    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
+    "e2e": "start-server-and-test build-and-start http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test build-and-start http://localhost:3000 \"cypress run --e2e\"",
     "e2e:playwright": "playwright test",
     "component": "cypress open --component",
     "component:headless": "cypress run --component",
