--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": "^18",
-    "npm": "^8 || ^9"
+    "npm": "^9"
   },
   "engineStrict": true,
   "scripts": {
@@ -39,9 +39,9 @@
     "date-fns": "^2.30.0",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
-    "fuse.js": "^6.6.2",
+    "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
-    "next": "^13.5.6",
+    "next": "^14.0.0",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,13 +58,13 @@
     "@testing-library/react": "^14.0.0",
     "@types/escape-html": "^1.0.3",
     "@types/jest": "^29.5.6",
-    "@types/react": "^18.2.31",
+    "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.1",
-    "cypress": "^13.3.2",
+    "cypress": "^13.3.3",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-markdownlint": "^0.5.0",
@@ -78,7 +78,7 @@
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "start-server-and-test": "^2.0.1",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   },
   "lint-staged": {
