--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-markdown": "^9.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
