--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next/third-parties": "^14.0.1",
     "@vercel/analytics": "^1.1.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
@@ -41,7 +42,7 @@
     "feed": "^4.2.2",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
-    "next": "^14.0.0",
+    "next": "^14.0.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,14 +59,14 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@types/escape-html": "^1.0.3",
-    "@types/jest": "^29.5.6",
+    "@types/jest": "^29.5.7",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.1",
-    "cypress": "^13.3.3",
+    "cypress": "^13.4.0",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^14.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-markdownlint": "^0.5.0",
