--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bestseenonfoot",
-  "version": "11.0.0",
+  "version": "12.0.0",
   "private": true,
   "engines": {
     "node": "^18",
@@ -24,17 +24,17 @@
     "component:headless": "cypress run --component",
     "test": "jest --watch",
     "test:ci": "jest --ci --no-watch --no-watchAll",
-    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run component:headless && npm run e2e:playwright",
+    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run e2e:playwright",
     "version": "npm run build && git add .",
     "postversion": "git push && git push --tags && rm -rf .next"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/third-parties": "^14.0.1",
+    "@next/third-parties": "^14.0.3",
     "@vercel/analytics": "^1.1.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
@@ -42,46 +42,46 @@
     "feed": "^4.2.2",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
-    "next": "^14.0.1",
+    "next": "^14.0.3",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.0",
+    "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "sharp": "^0.32.6",
+    "sharp": "^0.33.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.39.0",
-    "@tailwindcss/forms": "^0.5.6",
+    "@playwright/test": "^1.40.1",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@types/escape-html": "^1.0.3",
-    "@types/jest": "^29.5.7",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/escape-html": "^1.0.4",
+    "@types/jest": "^29.5.10",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.1",
-    "cypress": "^13.4.0",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.1",
+    "cypress": "^13.6.0",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-markdownlint": "^0.5.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.0.2",
-    "markdownlint-cli2": "^0.10.0",
+    "lint-staged": "^15.1.0",
+    "markdownlint-cli2": "^0.11.0",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
+    "prettier": "3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
