--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/third-parties": "^14.0.3",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/postgres": "^0.5.1",
+    "@vercel/postgres-kysely": "^0.6.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
+    "kysely": "^0.26.3",
     "next": "^14.0.3",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
@@ -65,6 +68,7 @@
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.1",
     "cypress": "^13.6.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^9.0.0",
