--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,15 +1,14 @@
 name: "Pull Request Labeler"
-on:
-  - pull_request_target
+on: [pull_request]
 
 jobs:
-  triage:
+  label:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/labeler@v5
         with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
           sync-labels: true
