--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,12 +1,13 @@
 name: "Pull Request Labeler"
-on: [pull_request]
+on:
+  - pull_request_target
 
 jobs:
-  label:
-    runs-on: ubuntu-latest
+  triage:
     permissions:
       contents: read
       pull-requests: write
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/labeler@v5
