--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,3 +34,5 @@ jobs:
         run: npm run mdlint
       - name: Jest Testing
         run: npm run test:ci
+      - name: Vitest Testing
+        run: npm run test:vitest
