--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "component:headless": "cypress run --component",
     "test": "jest --watch",
     "test:ci": "jest --ci --no-watch --no-watchAll",
-    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run e2e:playwright",
+    "test:vitest": "vitest",
+    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest && npm run e2e:playwright",
     "version": "npm run build && git add .",
     "postversion": "git push && git push --tags && rm -rf .next"
   },
@@ -66,6 +67,7 @@
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "cssnano": "^6.0.3",
     "cypress": "^13.6.3",
@@ -78,6 +80,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.0",
     "markdownlint-cli2": "^0.12.1",
     "postcss": "^8.4.33",
@@ -86,7 +89,8 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
