--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vitest": "^1.2.1"
   },
