--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "jest --watch",
     "test:ci": "jest --ci --no-watch --no-watchAll",
     "test:vitest": "vitest",
-    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest && npm run component:headless && npm run e2e:headless && npm run e2e:playwright",
+    "test:vitest:ci": "vitest run",
+    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest:ci && npm run component:headless && npm run e2e:headless && npm run e2e:playwright",
     "version": "npm run build && git add .",
     "postversion": "git push && git push --tags && rm -rf .next"
   },
