finish the post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "cSpell.words": [
+    "Blancas",
+    "Chaltén",
+    "Fitz",
+    "Hija",
+    "Lago",
+    "Piedras",
+    "Sucia",
+    "Vueltas"
+  ]
 }
