--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -16,5 +16,7 @@ jobs:
     steps:
       - name: "Check out Repository"
         uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: "Dependency Review"
         uses: actions/dependency-review-action@v3
