--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mdlint": "markdownlint-cli2 '**/*.md' '#node_modules'",
     "mdlintfix": "markdownlint-cli2-fix '**/*.md' '#node_modules'",
     "typecheck": "tsc",
-    "prepare": "husky install",
+    "prepare": "husky",
     "e2e": "start-server-and-test build-and-start http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test build-and-start http://localhost:3000 \"cypress run --e2e\"",
     "e2e:playwright": "playwright test",
@@ -39,15 +39,15 @@
     "@next/third-parties": "^14.1.0",
     "@vercel/analytics": "^1.1.2",
     "@vercel/postgres": "^0.7.1",
-    "@vercel/postgres-kysely": "^0.7.1",
-    "@vercel/speed-insights": "^1.0.7",
+    "@vercel/postgres-kysely": "^0.7.2",
+    "@vercel/speed-insights": "^1.0.9",
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
-    "kysely": "^0.26.3",
+    "kysely": "^0.27.2",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
@@ -62,27 +62,27 @@
     "@playwright/test": "^1.41.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/jest-dom": "^6.2.1",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.4.1",
+    "@testing-library/react": "^14.2.0",
     "@types/escape-html": "^1.0.4",
-    "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.48",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "cssnano": "^6.0.3",
-    "cypress": "^13.6.3",
-    "dotenv": "^16.3.2",
+    "cypress": "^13.6.4",
+    "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-markdownlint": "^0.5.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
-    "lint-staged": "^15.2.0",
+    "lint-staged": "^15.2.1",
     "markdownlint-cli2": "^0.12.1",
     "postcss": "^8.4.33",
     "postcss-import": "^16.0.0",
@@ -92,7 +92,7 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
