--- a/__vitests__/tsconfig.json
+++ b/__vitests__/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["es5", "dom"],
-    "types": ["node", "vitest/globals"],
+    "types": ["node", "vitest/globals"]
   },
-  "include": ["./**/*.ts", "./**/*.tsx"],
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
