adding some words to my dict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,20 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.words": [
+    "andino",
+    "berberis",
     "Blancas",
+    "Calafate",
     "Chaltén",
     "Fitz",
+    "Glaciares",
     "Hija",
     "Lago",
+    "microphylla",
+    "patagonico",
+    "Perito",
     "Piedras",
+    "Pietro's",
     "Sucia",
     "Vueltas"
   ]
