--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,6 +10,11 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
+      - name: Use Node.js from .nvmrc
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+          cache: "npm"
       - name: Checkout
         uses: actions/checkout@v4
       # Install NPM dependencies, cache them correctly
