untrack big jpg

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
-*.JPG filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.PNG filter=lfs diff=lfs merge=lfs -text
 *.jpg !text !filter !merge !diff
+*.JPG !text !filter !merge !diff
+*.png !text !filter !merge !diff
+*.PNG !text !filter !merge !diff
