add perito blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.words": [
     "Blancas",
+    "Calafate",
     "Chaltén",
     "Fitz",
     "Hija",
     "Lago",
+    "Perito",
     "Piedras",
     "Sucia",
     "Vueltas"
