add mendoza blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,29 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.words": [
+    "Arístides",
+    "Avenida",
     "Blancas",
+    "BRÖD",
     "Calafate",
+    "Cerro",
     "Chaltén",
+    "empanadas",
     "Fitz",
+    "fútbol",
     "Hija",
     "Lago",
+    "Martín",
+    "Montaña",
+    "Muna",
+    "Parque",
     "Perito",
     "Piedras",
+    "Restó",
     "Sucia",
+    "Turismo",
+    "Viajes",
+    "Villanueva",
     "Vueltas"
   ]
 }
