--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,22 +4,36 @@
     "Arístides",
     "Avenida",
     "Blancas",
+    "Blanco",
     "BRÖD",
     "Calafate",
     "Cerro",
     "Chaltén",
+    "Dulce",
     "empanadas",
+    "facturas",
     "Fitz",
     "fútbol",
+    "Guarda",
     "Hija",
+    "Lagarde",
     "Lago",
+    "Maguay",
+    "Malbec",
+    "Malen",
     "Martín",
+    "Melipal",
     "Montaña",
     "Muna",
+    "Oliveria",
     "Parque",
+    "Parrilla",
+    "Parrillada",
     "Perito",
     "Piedras",
     "Restó",
+    "Ruca",
+    "Sauvignon",
     "Sucia",
     "Turismo",
     "Viajes",
