add iguazu post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
+  "cSpell.language": "en,es",
   "cSpell.words": [
+    "america",
     "Arístides",
     "Avenida",
+    "Bambu",
     "Blancas",
     "Blanco",
     "BRÖD",
@@ -12,12 +15,16 @@
     "Dulce",
     "empanadas",
     "facturas",
+    "Fernet",
     "Fitz",
     "fútbol",
     "Guarda",
     "Hija",
+    "iguazu",
+    "Iguazú",
     "Lagarde",
     "Lago",
+    "lauren",
     "Maguay",
     "Malbec",
     "Malen",
@@ -31,6 +38,7 @@
     "Parrillada",
     "Perito",
     "Piedras",
+    "Rainforest",
     "Restó",
     "Ruca",
     "Sauvignon",
