--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "^14.1.4",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
