buenos aires post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,12 @@
     "Blancas",
     "Blanco",
     "BRÖD",
+    "Cabify",
     "Calafate",
+    "Caminito",
     "Cerro",
     "Chaltén",
+    "Cortazar",
     "Dulce",
     "empanadas",
     "facturas",
@@ -19,6 +22,7 @@
     "Fitz",
     "fútbol",
     "Guarda",
+    "Havanna",
     "Hija",
     "iguazu",
     "Iguazú",
@@ -32,20 +36,27 @@
     "Melipal",
     "Montaña",
     "Muna",
+    "Nadus",
     "Oliveria",
     "Parque",
     "Parrilla",
     "Parrillada",
     "Perito",
+    "Perón",
     "Piedras",
     "Rainforest",
+    "Reggaeton",
     "Restó",
+    "Rosedal",
     "Ruca",
     "Sauvignon",
     "Sucia",
+    "tereré",
     "Turismo",
+    "Ubers",
     "Viajes",
     "Villanueva",
-    "Vueltas"
+    "Vueltas",
+    "Zárate"
   ]
 }
