--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -63,12 +63,12 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: cypress-screenshots
+          name: cypress-component-screenshots
           path: cypress/screenshots
 
       # Test run video was always captured, so this action uses "always()" condition
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: cypress-videos
+          name: cypress-component-videos
           path: cypress/videos
