--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sharp": "^0.33.3",
