--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "cSpell.language": "en,es",
   "cSpell.words": [
     "america",
+    "Aremiti",
     "Arístides",
     "Avenida",
     "Bambu",
@@ -14,6 +15,7 @@
     "Caminito",
     "Cerro",
     "Chaltén",
+    "Changs",
     "Cortazar",
     "Dulce",
     "empanadas",
@@ -37,13 +39,16 @@
     "Montaña",
     "Muna",
     "Nadus",
+    "oceania",
     "Oliveria",
+    "Pape’ete",
     "Parque",
     "Parrilla",
     "Parrillada",
     "Perito",
     "Perón",
     "Piedras",
+    "polynesia",
     "Rainforest",
     "Reggaeton",
     "Restó",
@@ -57,6 +62,7 @@
     "Viajes",
     "Villanueva",
     "Vueltas",
-    "Zárate"
+    "Zárate",
+    "zealand"
   ]
 }
