add the blog entry

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,13 +30,17 @@
     "Iguazú",
     "Lagarde",
     "Lago",
+    "Lagoonarium",
     "lauren",
     "Maguay",
     "Malbec",
     "Malen",
+    "Manava",
     "Martín",
     "Melipal",
     "Montaña",
+    "moorea",
+    "Motu",
     "Muna",
     "Nadus",
     "oceania",
@@ -55,8 +59,11 @@
     "Rosedal",
     "Ruca",
     "Sauvignon",
+    "Sofitel",
     "Sucia",
+    "Temae",
     "tereré",
+    "Toatea",
     "Turismo",
     "Ubers",
     "Viajes",
