--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.language": "en,es",
   "cSpell.words": [
+    "Āfareaitu",
+    "Airbnbs",
     "america",
     "Aremiti",
     "Arístides",
@@ -9,6 +11,7 @@
     "Bambu",
     "Blancas",
     "Blanco",
+    "bottlenose",
     "BRÖD",
     "Cabify",
     "Calafate",
@@ -22,6 +25,7 @@
     "facturas",
     "Fernet",
     "Fitz",
+    "Francaise",
     "fútbol",
     "Guarda",
     "Havanna",
@@ -36,8 +40,11 @@
     "Malbec",
     "Malen",
     "Manava",
+    "Manutea",
+    "Marae",
     "Martín",
     "Melipal",
+    "Moehau",
     "Montaña",
     "moorea",
     "Motu",
@@ -45,7 +52,9 @@
     "Nadus",
     "oceania",
     "Oliveria",
+    "Opunohu",
     "Pape’ete",
+    "Papetoai",
     "Parque",
     "Parrilla",
     "Parrillada",
@@ -53,17 +62,22 @@
     "Perón",
     "Piedras",
     "polynesia",
+    "Polynesie",
     "Rainforest",
     "Reggaeton",
     "Restó",
     "Rosedal",
+    "Rotui",
     "Ruca",
     "Sauvignon",
     "Sofitel",
     "Sucia",
     "Temae",
     "tereré",
+    "Tipaniers",
+    "Titiroa",
     "Toatea",
+    "Tohivea",
     "Turismo",
     "Ubers",
     "Viajes",
