--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run build
         run: npm run build --if-present
       - name: Prettier Check
-        run: npx prettier --check .
+        run: npm run prettier:check
       - name: Type Check
         run: npm run typecheck
       - name: Lint JS
