--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: npm run e2e:playwright:install
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npm run e2e:playwright
       - uses: actions/upload-artifact@v4
         if: always()
         with:
