add auckland post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,8 @@
     "Cerro",
     "Chaltén",
     "Changs",
+    "cliffside",
+    "Coromandel",
     "Cortazar",
     "Dulce",
     "empanadas",
@@ -27,11 +29,13 @@
     "Fitz",
     "Francaise",
     "fútbol",
+    "Gopro",
     "Guarda",
     "Havanna",
     "Hija",
     "iguazu",
     "Iguazú",
+    "Kitekite",
     "Lagarde",
     "Lago",
     "Lagoonarium",
@@ -60,7 +64,9 @@
     "Parrillada",
     "Perito",
     "Perón",
+    "Picton",
     "Piedras",
+    "Piha",
     "polynesia",
     "Polynesie",
     "Rainforest",
@@ -78,11 +84,16 @@
     "Titiroa",
     "Toatea",
     "Tohivea",
+    "trailhead",
+    "Travellers",
     "Turismo",
     "Ubers",
     "Viajes",
     "Villanueva",
     "Vueltas",
+    "Waitakere",
+    "WWOOFing",
+    "Yaris",
     "Zárate",
     "zealand"
   ]
