--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
     "Hija",
     "iguazu",
     "Iguazú",
+    "Kauaeranga",
     "Kitekite",
     "Lagarde",
     "Lago",
@@ -92,6 +93,7 @@
     "Villanueva",
     "Vueltas",
     "Waitakere",
+    "Whitianga",
     "WWOOFing",
     "Yaris",
     "Zárate",
