adding the blog entry

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,8 +31,10 @@
     "fútbol",
     "Gopro",
     "Guarda",
+    "Hahei",
     "Havanna",
     "Hija",
+    "Hoho",
     "iguazu",
     "Iguazú",
     "Kauaeranga",
@@ -93,6 +95,7 @@
     "Villanueva",
     "Vueltas",
     "Waitakere",
+    "Whanganui",
     "Whitianga",
     "WWOOFing",
     "Yaris",
