--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepare": "husky",
     "e2e": "start-server-and-test build-and-start http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test build-and-start http://localhost:3000 \"cypress run --e2e\"",
-    "e2e:playwright": "npx playwright install && playwright test",
+    "e2e:playwright": "playwright install && playwright test",
     "e2e:playwright:install": "playwright install --with-deps",
     "component": "cypress open --component",
     "component:headless": "cypress run --component",
