--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "Bambu",
     "Blancas",
     "Blanco",
+    "Bookme",
     "bottlenose",
     "BRÖD",
     "Cabify",
@@ -31,6 +32,7 @@
     "fútbol",
     "Gopro",
     "Guarda",
+    "gurgley",
     "Hahei",
     "Havanna",
     "Hija",
@@ -52,6 +54,7 @@
     "Martín",
     "Melipal",
     "Moehau",
+    "Mokola",
     "Montaña",
     "moorea",
     "Motu",
@@ -80,13 +83,16 @@
     "Ruca",
     "Sauvignon",
     "Sofitel",
+    "splooge",
     "Sucia",
+    "Tapu",
     "Temae",
     "tereré",
     "Tipaniers",
     "Titiroa",
     "Toatea",
     "Tohivea",
+    "Tokorangi",
     "trailhead",
     "Travellers",
     "Turismo",
@@ -95,6 +101,8 @@
     "Villanueva",
     "Vueltas",
     "Waitakere",
+    "Waitomo",
+    "Whakarewarewa",
     "Whanganui",
     "Whitianga",
     "WWOOFing",
