--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "18.0.0",
   "private": true,
   "engines": {
-    "node": "^18.12.0",
-    "npm": "^9 || ^10"
+    "node": "18",
+    "npm": "10"
   },
   "engineStrict": true,
   "scripts": {
@@ -20,7 +20,7 @@
     "prepare": "husky",
     "e2e": "start-server-and-test build-and-start http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test build-and-start http://localhost:3000 \"cypress run --e2e\"",
-    "e2e:playwright": "playwright test",
+    "e2e:playwright": "playwright install && playwright test",
     "e2e:playwright:install": "playwright install --with-deps",
     "component": "cypress open --component",
     "component:headless": "cypress run --component",
