add post and fix typography

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,8 @@
     "Guarda",
     "gurgley",
     "Hahei",
+    "haka",
+    "hangi",
     "Havanna",
     "Hija",
     "Hoho",
@@ -73,9 +75,12 @@
     "Picton",
     "Piedras",
     "Piha",
+    "Piopio",
     "polynesia",
     "Polynesie",
+    "powhiri",
     "Rainforest",
+    "rākau",
     "Reggaeton",
     "Restó",
     "Rosedal",
@@ -85,6 +90,7 @@
     "Sofitel",
     "splooge",
     "Sucia",
+    "Tamaki",
     "Tapu",
     "Temae",
     "tereré",
@@ -102,12 +108,15 @@
     "Vueltas",
     "Waitakere",
     "Waitomo",
+    "wero",
     "Whakarewarewa",
     "Whanganui",
     "Whitianga",
     "WWOOFing",
     "Yaris",
     "Zárate",
-    "zealand"
+    "zealand",
+    "Zorbing",
+    "zorbs"
   ]
 }
