--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
+    "vercel": "^37.1.1",
     "vitest": "^2.0.5"
   },
   "lint-staged": {
