--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "cliffside",
     "Coromandel",
     "Cortazar",
+    "Denize",
     "Dulce",
     "empanadas",
     "facturas",
@@ -30,6 +31,7 @@
     "Fitz",
     "Francaise",
     "fútbol",
+    "Glamdring",
     "Gopro",
     "Guarda",
     "gurgley",
@@ -47,10 +49,12 @@
     "Lago",
     "Lagoonarium",
     "lauren",
+    "longfin",
     "Maguay",
     "Malbec",
     "Malen",
     "Manava",
+    "Mangaotaki",
     "Manutea",
     "Marae",
     "Martín",
@@ -65,6 +69,7 @@
     "oceania",
     "Oliveria",
     "Opunohu",
+    "Orcrist",
     "Pape’ete",
     "Papetoai",
     "Parque",
@@ -90,10 +95,12 @@
     "Sofitel",
     "splooge",
     "Sucia",
+    "Suzie",
     "Tamaki",
     "Tapu",
     "Temae",
     "tereré",
+    "Thorin’s",
     "Tipaniers",
     "Titiroa",
     "Toatea",
@@ -101,6 +108,7 @@
     "Tokorangi",
     "trailhead",
     "Travellers",
+    "Trollshaws",
     "Turismo",
     "Ubers",
     "Viajes",
@@ -108,6 +116,7 @@
     "Vueltas",
     "Waitakere",
     "Waitomo",
+    "Warrick",
     "wero",
     "Whakarewarewa",
     "Whanganui",
