--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
     "hangi",
     "Havanna",
     "Hija",
+    "Hobbiton",
     "Hoho",
     "iguazu",
     "Iguazú",
@@ -58,6 +59,7 @@
     "Manutea",
     "Marae",
     "Martín",
+    "Matamata",
     "Melipal",
     "Moehau",
     "Mokola",
@@ -106,9 +108,11 @@
     "Toatea",
     "Tohivea",
     "Tokorangi",
+    "Tongariro",
     "trailhead",
     "Travellers",
     "Trollshaws",
+    "Turangi",
     "Turismo",
     "Ubers",
     "Viajes",
