--- a/src/cypress/tsconfig.json
+++ b/src/cypress/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "lib": ["es5", "dom"],
-    "types": ["node", "jest", "@testing-library/jest-dom"]
+    "types": ["cypress", "node"]
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
