--- a/.gitignore
+++ b/.gitignore
@@ -143,8 +143,6 @@ public/feed.json
 public/feed.xml
 
 # service worker
-public/sw.js
-public/sw.js.map
 public/workbox-*.js
 public/workbox-*.js.map
 
@@ -158,3 +156,4 @@ cypress/downloads
 
 *storybook.log
 storybook-static/
+certificates
