--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     }
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --experimental-https",
     "build": "next build",
     "start": "next start",
     "build-and-start": "next build && next start",
-    "lint": "next lint",
+    "lint": "next lint --max-warnings 0",
     "lint-staged": "lint-staged",
     "mdlint": "markdownlint-cli2 '**/*.md' '#node_modules'",
     "mdlintfix": "markdownlint-cli2-fix '**/*.md' '#node_modules'",
@@ -52,11 +52,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "15.0.1",
-    "@vercel/analytics": "^1.3.1",
+    "@next/third-parties": "^15.0.2",
+    "@vercel/analytics": "^1.3.2",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
-    "@vercel/speed-insights": "^1.0.12",
+    "@vercel/speed-insights": "^1.0.14",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "escape-html": "^1.0.3",
@@ -64,8 +64,7 @@
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "kysely": "^0.27.4",
-    "next": "15.0.1",
-    "next-pwa": "^5.6.0",
+    "next": "^15.0.2",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
@@ -77,14 +76,16 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^2.0.2",
-    "@playwright/test": "^1.48.1",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-interactions": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/addon-onboarding": "^8.3.5",
+    "@chromatic-com/storybook": "^3.2.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
+    "@playwright/test": "^1.48.2",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-onboarding": "^8.3.6",
     "@storybook/blocks": "^8.2.7",
-    "@storybook/nextjs": "^8.3.5",
+    "@storybook/nextjs": "^8.3.6",
     "@storybook/react": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@tailwindcss/forms": "^0.5.9",
@@ -92,20 +93,20 @@
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@types/escape-html": "^1.0.4",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
-    "cypress": "^13.15.0",
+    "cypress": "^13.15.1",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.1",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^15.0.2",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^3.6.0",
+    "eslint-plugin-cypress": "^4.0.0",
     "eslint-plugin-markdownlint": "^0.6.0",
-    "eslint-plugin-storybook": "^0.9.0",
+    "eslint-plugin-storybook": "^0.10.1",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -117,30 +118,14 @@
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "start-server-and-test": "^2.0.8",
-    "storybook": "^8.3.5",
+    "storybook": "^8.3.6",
     "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vercel": "^37.9.0",
-    "vitest": "^2.1.3"
+    "vercel": "^37.12.1",
+    "vitest": "^2.1.4"
   },
-  "lint-staged": {
-    "*.md": [
-      "markdownlint-cli2 --cache --fix",
-      "prettier --cache --write --ignore-unknown"
-    ],
-    "*.{css,scss}": [
-      "stylelint --cache --fix",
-      "prettier --cache --write --ignore-unknown"
-    ],
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --cache --fix",
-      "prettier --cache --write --ignore-unknown"
-    ],
-    "!(*.md|*.css|*.scss|*.js|*.jsx|*.ts|*.tsx)": [
-      "prettier --cache --write --ignore-unknown"
-    ]
-  },
+  "Remove when React 19 is stable": true,
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
