--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 engine-strict=true
 git-tag-version=false
-# Remove when React 19 is stable
-legacy-peer-deps=true
+# Set false when React 19 is stable
+legacy-peer-deps=false
+# Set false when React 19 is stable
+force=true
