--- a/src/__vitests__/tsconfig.json
+++ b/src/__vitests__/tsconfig.json
@@ -5,5 +5,6 @@
     "lib": ["es5", "dom"],
     "types": ["node", "vitest/globals"]
   },
+  "exclude": ["../../node_modules"],
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
