--- a/src/cypress/tsconfig.json
+++ b/src/cypress/tsconfig.json
@@ -5,5 +5,7 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"]
   },
+  "exclude": ["../../node_modules"],
+
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
