--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
       }
     ]
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/__tests__/"],
   "include": [
     "next-env.d.ts",
     "src/**/*.ts",
