--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
 engine-strict=true
 git-tag-version=false
+# Set false when React 19 is stable
+legacy-peer-deps=false
+# Set false when React 19 is stable
+force=true
