--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
   "name": "bestseenonfoot",
-  "version": "20.0.0",
+  "version": "21.0.0",
   "private": true,
   "engines": {
-    "node": "20",
-    "npm": "10"
+    "node": "^22.11.0 || ^20.9.0 || ^18.12.0",
+    "npm": "^10.0.0"
   },
   "engineStrict": true,
+  "devEngines": {
+    "runtime": {
+      "name": "node",
+      "onFail": "error"
+    },
+    "packageManager": {
+      "name": "npm",
+      "onFail": "error"
+    }
+  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack --experimental-https",
     "build": "next build",
     "start": "next start",
     "build-and-start": "next build && next start",
-    "lint": "next lint",
+    "storybook": "storybook dev -p 6006 -c src/storybook",
+    "build-storybook": "storybook build -c src/storybook",
+    "lint": "next lint --max-warnings 0",
     "lint-staged": "lint-staged",
     "mdlint": "markdownlint-cli2 '**/*.md' '#node_modules'",
     "mdlintfix": "markdownlint-cli2-fix '**/*.md' '#node_modules'",
-    "typecheck": "tsc",
-    "prepare": "husky",
+    "typecheck": "tsc && tsc --project src/__tests__/tsconfig.json && tsc --project src/__vitests__/tsconfig.json && tsc --project src/cypress/tsconfig.json",
+    "prettier": "prettier --write .",
+    "prettier:check": "prettier --check .",
     "e2e": "start-server-and-test build-and-start http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test build-and-start http://localhost:3000 \"cypress run --e2e\"",
     "e2e:playwright": "playwright install --with-deps && playwright test",
@@ -28,13 +41,10 @@
     "test:ci": "jest --ci --no-watch --no-watchAll",
     "test:vitest": "vitest",
     "test:vitest:ci": "vitest run",
-    "prettier": "prettier --write .",
-    "prettier:check": "prettier --check .",
-    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest:ci && npm run component:headless && npm run e2e:headless && npm run e2e:playwright && npm run build-storybook",
-    "version": "npm run build && git add .",
-    "postversion": "git push && git push --tags && rm -rf .next",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "prepare": "husky",
+    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest:ci && npm run component:headless && npm run e2e:playwright",
+    "version": "npm run build && npm run build-storybook",
+    "postversion": "rm -rf .next && rm -rf storybook-static"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -42,11 +52,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "^14.2.15",
-    "@vercel/analytics": "^1.3.1",
+    "@next/third-parties": "^15.0.2",
+    "@vercel/analytics": "^1.3.2",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
-    "@vercel/speed-insights": "^1.0.12",
+    "@vercel/speed-insights": "^1.0.14",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "escape-html": "^1.0.3",
@@ -54,11 +64,10 @@
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "kysely": "^0.27.4",
-    "next": "^14.2.15",
-    "next-pwa": "^5.6.0",
-    "react": "^18.3.1",
+    "next": "^15.0.2",
+    "react": "19.0.0-rc-69d4b800-20241021",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-markdown": "^9.0.1",
     "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
@@ -67,14 +76,16 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^2.0.2",
-    "@playwright/test": "^1.48.1",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-interactions": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/addon-onboarding": "^8.3.5",
+    "@chromatic-com/storybook": "^3.2.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
+    "@playwright/test": "^1.48.2",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-onboarding": "^8.3.6",
     "@storybook/blocks": "^8.2.7",
-    "@storybook/nextjs": "^8.3.5",
+    "@storybook/nextjs": "^8.3.6",
     "@storybook/react": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@tailwindcss/forms": "^0.5.9",
@@ -82,20 +93,20 @@
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@types/escape-html": "^1.0.4",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@types/jest": "^29.5.14",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
-    "cypress": "^13.15.0",
+    "cypress": "^13.15.1",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.15",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^15.0.2",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^3.6.0",
+    "eslint-plugin-cypress": "^4.0.0",
     "eslint-plugin-markdownlint": "^0.6.0",
-    "eslint-plugin-storybook": "^0.9.0",
+    "eslint-plugin-storybook": "^0.10.1",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -107,14 +118,16 @@
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "start-server-and-test": "^2.0.8",
-    "storybook": "^8.3.5",
+    "storybook": "^8.3.6",
     "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vercel": "^37.9.0",
-    "vitest": "^2.1.3"
+    "vercel": "^37.13.0",
+    "vitest": "^2.1.4"
   },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+  "Remove when React 19 is stable": true,
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
