--- a/src/cypress/tsconfig.json
+++ b/src/cypress/tsconfig.json
@@ -1,9 +1,11 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"]
   },
+  "exclude": ["../../node_modules"],
+
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
