--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
     "iguazu",
     "Iguazú",
     "Kauaeranga",
+    "Ketetahi",
     "Kitekite",
     "Lagarde",
     "Lago",
@@ -56,6 +57,7 @@
     "Malen",
     "Manava",
     "Mangaotaki",
+    "Mangatepopo",
     "Manutea",
     "Marae",
     "Martín",
@@ -68,6 +70,7 @@
     "Motu",
     "Muna",
     "Nadus",
+    "Ngauruhoe",
     "oceania",
     "Oliveria",
     "Opunohu",
@@ -92,6 +95,7 @@
     "Restó",
     "Rosedal",
     "Rotui",
+    "Ruapehu",
     "Ruca",
     "Sauvignon",
     "Sofitel",
@@ -100,6 +104,7 @@
     "Suzie",
     "Tamaki",
     "Tapu",
+    "Taupo",
     "Temae",
     "tereré",
     "Thorin’s",
