--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,8 @@
     "Francaise",
     "fútbol",
     "Glamdring",
+    "Gollum",
+    "Gollum's",
     "Gopro",
     "Guarda",
     "gurgley",
@@ -44,6 +46,7 @@
     "Hoho",
     "iguazu",
     "Iguazú",
+    "Ithilien",
     "Kauaeranga",
     "Ketetahi",
     "Kitekite",
@@ -58,6 +61,7 @@
     "Manava",
     "Mangaotaki",
     "Mangatepopo",
+    "Mangawhero",
     "Manutea",
     "Marae",
     "Martín",
@@ -67,11 +71,13 @@
     "Mokola",
     "Montaña",
     "moorea",
+    "Mordor",
     "Motu",
     "Muna",
     "Nadus",
     "Ngauruhoe",
     "oceania",
+    "Ohakune",
     "Oliveria",
     "Opunohu",
     "Orcrist",
@@ -98,13 +104,17 @@
     "Ruapehu",
     "Ruca",
     "Sauvignon",
+    "Serkis",
+    "Skifield",
     "Sofitel",
     "splooge",
     "Sucia",
     "Suzie",
     "Tamaki",
     "Tapu",
+    "Taranaki",
     "Taupo",
+    "Tawhai",
     "Temae",
     "tereré",
     "Thorin’s",
@@ -127,6 +137,7 @@
     "Waitomo",
     "Warrick",
     "wero",
+    "Whakapapa",
     "Whakarewarewa",
     "Whanganui",
     "Whitianga",
