--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
     "Manutea",
     "Marae",
     "Martín",
+    "Mata",
     "Matamata",
     "Melipal",
     "Moehau",
@@ -103,6 +104,7 @@
     "Rotui",
     "Ruapehu",
     "Ruca",
+    "Salkantay",
     "Sauvignon",
     "Serkis",
     "Skifield",
