--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "^15.1.3",
+    "@next/third-parties": "15.1.6",
     "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
@@ -64,10 +64,10 @@
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "kysely": "^0.27.5",
-    "next": "^15.1.3",
-    "react": "^19.0.0",
+    "next": "15.1.6",
+    "react": "19.0.0",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.0.0",
     "react-markdown": "^9.0.3",
     "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
@@ -94,8 +94,8 @@
     "@testing-library/react": "^16.1.0",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.3",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
@@ -103,7 +103,7 @@
     "cypress": "^13.17.0",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
+    "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-markdownlint": "^0.6.0",
@@ -125,5 +125,9 @@
     "typescript": "^5.7.2",
     "vercel": "^39.2.5",
     "vitest": "^2.1.8"
+  },
+  "overrides": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
