--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,4 @@ engine-strict=true
 git-tag-version=false
 # good projects have these set to false: Set false when everything can use react 19
 legacy-peer-deps=true
-force=true
+force=false
