--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@storybook/react": "^8.5.3",
     "@storybook/test": "^8.5.3",
     "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -99,7 +100,6 @@
     "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "ajv": "^8.17.1",
-    "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "cypress": "^13.17.0",
     "dotenv": "^16.4.7",
@@ -116,12 +116,11 @@
     "lint-staged": "^15.3.0",
     "markdownlint-cli2": "^0.17.1",
     "postcss": "^8.4.49",
-    "postcss-import": "^16.1.0",
     "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "start-server-and-test": "^2.0.9",
     "storybook": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "vercel": "^39.2.5",
