add dimholt road post and fix some styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "Āfareaitu",
     "Airbnbs",
     "america",
+    "Aragorn",
     "Aremiti",
     "Arístides",
     "Avenida",
@@ -24,6 +25,7 @@
     "Coromandel",
     "Cortazar",
     "Denize",
+    "Dimholt",
     "Dulce",
     "empanadas",
     "facturas",
@@ -31,6 +33,7 @@
     "Fitz",
     "Francaise",
     "fútbol",
+    "Gimli",
     "Glamdring",
     "Gollum",
     "Gollum's",
@@ -47,13 +50,16 @@
     "iguazu",
     "Iguazú",
     "Ithilien",
+    "Kaitoke",
     "Kauaeranga",
     "Ketetahi",
     "Kitekite",
+    "kupe",
     "Lagarde",
     "Lago",
     "Lagoonarium",
     "lauren",
+    "Legolas",
     "longfin",
     "Maguay",
     "Malbec",
@@ -66,6 +72,7 @@
     "Marae",
     "Martín",
     "Mata",
+    "Matakitaki",
     "Matamata",
     "Melipal",
     "Moehau",
@@ -82,11 +89,14 @@
     "Oliveria",
     "Opunohu",
     "Orcrist",
+    "Pakuratahi",
+    "Palliser",
     "Pape’ete",
     "Papetoai",
     "Parque",
     "Parrilla",
     "Parrillada",
+    "Pelennor",
     "Perito",
     "Perón",
     "Picton",
@@ -96,10 +106,12 @@
     "polynesia",
     "Polynesie",
     "powhiri",
+    "Putangirua",
     "Rainforest",
     "rākau",
     "Reggaeton",
     "Restó",
+    "Rivendell",
     "Rosedal",
     "Rotui",
     "Ruapehu",
