add wellington post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "Arístides",
     "Avenida",
     "Bambu",
+    "bigature",
+    "bigatures",
     "Blancas",
     "Blanco",
     "Bookme",
@@ -33,6 +35,7 @@
     "Fitz",
     "Francaise",
     "fútbol",
+    "Gallipoli",
     "Gimli",
     "Glamdring",
     "Gollum",
@@ -69,12 +72,14 @@
     "Mangatepopo",
     "Mangawhero",
     "Manutea",
+    "Māori",
     "Marae",
     "Martín",
     "Mata",
     "Matakitaki",
     "Matamata",
     "Melipal",
+    "Miramar",
     "Moehau",
     "Mokola",
     "Montaña",
@@ -124,6 +129,7 @@
     "splooge",
     "Sucia",
     "Suzie",
+    "Symons",
     "Tamaki",
     "Tapu",
     "Taranaki",
@@ -132,11 +138,13 @@
     "Temae",
     "tereré",
     "Thorin’s",
+    "Thunderbirds",
     "Tipaniers",
     "Titiroa",
     "Toatea",
     "Tohivea",
     "Tokorangi",
+    "Tongarewa",
     "Tongariro",
     "trailhead",
     "Travellers",
@@ -144,13 +152,16 @@
     "Turangi",
     "Turismo",
     "Ubers",
+    "Uruk",
     "Viajes",
     "Villanueva",
     "Vueltas",
     "Waitakere",
+    "Waitangi",
     "Waitomo",
     "Warrick",
     "wero",
+    "Weta",
     "Whakapapa",
     "Whakarewarewa",
     "Whanganui",
