--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
     "facturas",
     "Fernet",
     "Fitz",
+    "Foulwind",
     "Francaise",
     "fútbol",
     "Gallipoli",
@@ -53,6 +54,7 @@
     "iguazu",
     "Iguazú",
     "Ithilien",
+    "Itimahuwhero",
     "Kaitoke",
     "Kauaeranga",
     "Ketetahi",
@@ -96,6 +98,7 @@
     "Orcrist",
     "Pakuratahi",
     "Palliser",
+    "Paparoa",
     "Pape’ete",
     "Papetoai",
     "Parque",
@@ -111,6 +114,7 @@
     "polynesia",
     "Polynesie",
     "powhiri",
+    "Punakaiki",
     "Putangirua",
     "Rainforest",
     "rākau",
@@ -134,6 +138,7 @@
     "Tapu",
     "Taranaki",
     "Taupo",
+    "Tauranga",
     "Tawhai",
     "Temae",
     "tereré",
@@ -161,6 +166,7 @@
     "Waitomo",
     "Warrick",
     "wero",
+    "Westport",
     "Weta",
     "Whakapapa",
     "Whakarewarewa",
