--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
     "Glamdring",
     "Gollum",
     "Gollum's",
+    "Gondor",
     "Gopro",
     "Guarda",
     "gurgley",
@@ -51,6 +52,7 @@
     "Hija",
     "Hobbiton",
     "Hoho",
+    "Hokitika",
     "iguazu",
     "Iguazú",
     "Ithilien",
@@ -113,6 +115,7 @@
     "Piopio",
     "polynesia",
     "Polynesie",
+    "pounamu",
     "powhiri",
     "Punakaiki",
     "Putangirua",
@@ -121,6 +124,7 @@
     "Reggaeton",
     "Restó",
     "Rivendell",
+    "Rohan",
     "Rosedal",
     "Rotui",
     "Ruapehu",
