--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -127,6 +127,7 @@
     "Rohan",
     "Rosedal",
     "Rotui",
+    "Roys",
     "Ruapehu",
     "Ruca",
     "Salkantay",
@@ -168,6 +169,7 @@
     "Waitakere",
     "Waitangi",
     "Waitomo",
+    "Wanaka",
     "Warrick",
     "wero",
     "Westport",
