--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "america",
     "Aragorn",
     "Aremiti",
+    "Argonath",
     "Arístides",
     "Avenida",
     "Bambu",
@@ -59,6 +60,7 @@
     "Itimahuwhero",
     "Kaitoke",
     "Kauaeranga",
+    "Kawarau",
     "Ketetahi",
     "Kitekite",
     "kupe",
@@ -123,8 +125,10 @@
     "rākau",
     "Reggaeton",
     "Restó",
+    "Rippon",
     "Rivendell",
     "Rohan",
+    "rosé",
     "Rosedal",
     "Rotui",
     "Roys",
@@ -136,6 +140,7 @@
     "Skifield",
     "Sofitel",
     "splooge",
+    "Stoneridge",
     "Sucia",
     "Suzie",
     "Symons",
